# stacks-encoding-native-js

./: .editorconfig  .gitignore  .gitmodules  .npmignore  .releaserc  CHANGELOG.md  Cargo.toml  README.md  build.js  index.d.ts  index.node.d.ts  index.ts  loader.d.ts  loader.js  package-lock.json  package.json  rust-toolchain  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  test.yml
benches/: c32_bench.rs
examples/: decode-cv-to-object.ts  decode-cv-to-principal.ts  decode-cv-to-repr.ts  decode-cv-to-typed-object.ts  decode-tx.ts  encode-values.ts  index.ts  package-lock.json  package.json  stacks-address-decode-to-parts.ts  stacks-address-encode-from-parts.ts
perf-tests/decode-contract-call-args/: test.js
perf-tests/decode-post-conditions/: test.js
perf-tests/decode-stx-address/: test.js
perf-tests/encode-stx-address/: test.js
scripts/: build.js  loader.js  release.sh
src/: hex.rs  lib.rs  neon_encoder.rs  neon_util.rs  serialize_util.rs
src/address/: b58.rs  bitcoin_address.rs  c32.rs  mod.rs  stacks_address.rs
src/clarity_value/: deserialize.rs  mod.rs  neon_encoder.rs  serder.rs  signatures.rs  types.rs
src/memo/: mod.rs
src/post_condition/: deserialize.rs  mod.rs  neon_encoder.rs
src/pox_events/: btc_address.rs  decode.rs  mod.rs  neon_encoder.rs  types.rs
src/stacks_block/: deserialize.rs  mod.rs  neon_encoder.rs
src/stacks_tx/: deserialize.rs  mod.rs  neon_encoder.rs
src/unicode_printable/: mod.rs
stacks-encoding-native-js/: Cargo.toml  index.node
stacks-encoding-native-js/src/: lib.rs
tests/: clarity-value-list-decode.test.ts  clarity-value-to-json.test.ts  clarity-value-to-repr.test.ts  memo.test.ts  nakamoto-block.test.ts  post-conditions.test.ts  stacks-address.test.ts  tx-decode-2.1.test.ts  tx-decode-3.0.test.ts  tx-decode.test.ts
tests/data/: versioned-smart-contract-tx.hex
ts/: index.ts  types.ts
