[package]
name = "stacks-encoding-native-js"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]
resolver = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[profile.release-dev]
inherits = "release"
debug = true
incremental = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
hex-simd = { version = "0.5.0" }
simd-abstraction = { version = "0.5.0", features = ["alloc", "std"] }
regex = "1.5"
git-version = "0.3.5"
lazy_static = "1.4.0"
unicode-segmentation = "1.9.0"
rand = "0.8.5"
byteorder = "1.4.3"

[dependencies.pprof]
version = "0.9.1"
features = ["flamegraph"]
optional = true

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(target_env = "msvc")))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), target_env = "msvc"))'.dependencies]
sha2 = { version = "0.10" }

[dependencies.neon]
version = "1.0.0"
# git = "https://github.com/zone117x/neon"
# rev = "bdb936a7fba8fb932fc61cbe529e06f65f75f9d9"
default-features = false
features = ["napi-6"]

[dev-dependencies]
flate2 = "1.0.22"
criterion = "0.3"

[features]
profiling = ["pprof"]

[[bench]]
name = "c32_bench"
harness = false
