[package]
name = "stacks-encoding-native-js"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]
resolver = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[profile.release-dev]
inherits = "release"
debug = true
incremental = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Stacks codec from clarinet - provides all wire format encoding/decoding
stacks-codec = { git = "https://github.com/stx-labs/clarinet", branch = "main" }

# Clarity types and stacks-common from stacks-core (same revision used by stacks-codec)
clarity = { git = "https://github.com/stacks-network/stacks-core.git", rev = "3da96c1a3af20bd677a7d8bfd17dcfbcde86d78b", default-features = false, features = ["developer-mode"] }
stacks-common = { package = "stacks-common", git = "https://github.com/stacks-network/stacks-core.git", rev = "3da96c1a3af20bd677a7d8bfd17dcfbcde86d78b", default-features = false, features = ["developer-mode"] }

# Hex encoding utilities
hex-simd = { version = "0.5.0" }
simd-abstraction = { version = "0.5.0", features = ["alloc", "std"] }

# Base58 encoding for Bitcoin addresses
bs58 = "0.5"

# Memo normalization
regex = "1.5"
lazy_static = "1.4.0"
unicode-segmentation = "1.9.0"

# Version info
git-version = "0.3.5"

# Neon bindings for Node.js
[dependencies.neon]
version = "1.0.0"
default-features = false
features = ["napi-6"]

# Optional profiling support
[dependencies.pprof]
version = "0.9.1"
features = ["flamegraph"]
optional = true

[dev-dependencies]
flate2 = "1.0.22"

[features]
profiling = ["pprof"]
