[package]
name = "stacks-encoding-native-js"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]
resolver = "2"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stacks_common = { package = "stacks-common", path = "../stacks-blockchain/stacks-common/." }
clarity = { package = "clarity", path = "../stacks-blockchain/clarity/." }
stacks = { package = "blockstack-core", path = "../stacks-blockchain/." }
hex = "0.4"
serde_json = "1.0"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(target_env = "msvc")))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), target_env = "msvc"))'.dependencies]
sha2 = { version = "0.10" }

[dependencies.neon]
# version = "0.10.0-alpha.3"
path = "/Users/matt/Projects/neon"
default-features = false
features = ["napi-6"]
